# LogCraft

./: .gitignore  .gitmodules  CMakeLists.txt  features.md  how_to_use.md  readme.md  todo.md
buildtest/: CMakeLists.txt  buildtest.cpp
libBuild/hdr/: backtrace.hpp  defines.hpp  fileObserver.hpp  lc.hpp  log.hpp  logColor.hpp  logConfig.hpp  logMsg.hpp  logcraftConfig.hpp  msgLiteral.hpp  msgServer.hpp  stringliteral.hpp  write.hpp
libBuild/include/logcraft/: backtrace.hpp  log.hpp  logColor.hpp  logMsg.hpp  msgServer.hpp  write.hpp
libBuild/src/: backtrace.cpp  fileObserver.cpp  lc.cpp  logColor.cpp  logConfig.cpp  logcraftConfig.cpp  msgLiteral.cpp  msgServer.cpp  write.cpp
